@@ -626,6 +626,12 @@
     <dd>Change it to be a formatted output function (i.e. catch exceptions).
     </dd>
 
+    <dt><a href="lwg-active.html#596">596</a>:
+        <em>27.8.1.3 Table 112 omits "a+" and "a+b" modes</em>
+    </dt>
+    <dd>Add the missing modes to fopen_mode.
+    </dd>
+
     <dt><a href="lwg-defects.html#660">660</a>:
         <em>Missing bitwise operations</em>
     </dt>
