@@ -259,26 +259,31 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
        *
        *  Table 92, adapted here, gives the relation between openmode
        *  combinations and the equivalent fopen() flags.
-       *  (NB: lines in|out|app and binary|in|out|app per DR 596)
+       *  (NB: lines app, in|out|app, in|app, binary|app, binary|in|out|app,
+       *  and binary|in|app per DR 596)
        *  +---------------------------------------------------------+
        *  | ios_base Flag combination            stdio equivalent   |
        *  |binary  in  out  trunc  app                              |
        *  +---------------------------------------------------------+
        *  |             +                        "w"                |
        *  |             +           +            "a"                |
+       *  |                         +            "a"                |
        *  |             +     +                  "w"                |
        *  |         +                            "r"                |
        *  |         +   +                        "r+"               |
        *  |         +   +     +                  "w+"               |
        *  |         +   +           +            "a+"               |
+       *  |         +               +            "a+"               |
        *  +---------------------------------------------------------+
        *  |   +         +                        "wb"               |
        *  |   +         +           +            "ab"               |
+       *  |   +                     +            "ab"               |
        *  |   +         +     +                  "wb"               |
        *  |   +     +                            "rb"               |
        *  |   +     +   +                        "r+b"              |
        *  |   +     +   +     +                  "w+b"              |
        *  |   +     +   +           +            "a+b"              |
+       *  |   +     +               +            "a+b"              |
        *  +---------------------------------------------------------+
        */
       __filebuf_type*
