@@ -1,6 +1,6 @@
 // 2006-10-01  Paolo Carlini  <pcarlini@suse.de>
 
-// Copyright (C) 2006 Free Software Foundation, Inc.
+// Copyright (C) 2006, 2007 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -23,8 +23,7 @@
 #include <fstream>
 #include <testsuite_hooks.h>
 
-// As an extension to Table 92, consistently with the C standards, we also
-// allow in|out|app and in|out|app|binary.
+// DR 596.
 void test01()
 {
   bool test __attribute__((unused)) = true;
@@ -32,14 +31,35 @@ void test01()
 
   std::fstream scratch_file;
 
+  scratch_file.open(name, std::ios_base::app);
+  VERIFY( scratch_file );
+  VERIFY( scratch_file.is_open() );
+  scratch_file.close();
+
   scratch_file.open(name, std::ios_base::in | std::ios_base::out
 		    | std::ios_base::app);
   VERIFY( scratch_file );
   VERIFY( scratch_file.is_open() );
   scratch_file.close();
 
+  scratch_file.open(name, std::ios_base::in | std::ios_base::app);
+  VERIFY( scratch_file );
+  VERIFY( scratch_file.is_open() );
+  scratch_file.close();
+
+  scratch_file.open(name, std::ios_base::app | std::ios_base::binary);
+  VERIFY( scratch_file );
+  VERIFY( scratch_file.is_open() );
+  scratch_file.close();
+
   scratch_file.open(name, std::ios_base::in | std::ios_base::out
 		    | std::ios_base::app | std::ios_base::binary);
+  VERIFY( scratch_file );
+  VERIFY( scratch_file.is_open() );  
+  scratch_file.close();
+
+  scratch_file.open(name, std::ios_base::in | std::ios_base::app
+		    | std::ios_base::binary);
   VERIFY( scratch_file );
   VERIFY( scratch_file.is_open() );  
   scratch_file.close();
